# EgyptianSenet

./: CMakeLists.txt  README.md
Senet/: HieroglyphicsOKBut.cpp  HieroglyphicsOKBut.h  HieroglyphicsWin.cpp  HieroglyphicsWin.h  ReadMe.txt  Resource.h  Senet.cpp  Senet.rc  SenetBoardWin.cpp  SenetBoardWin.h  SenetHomeWin.cpp  SenetHomeWin.h  SenetSticksWin.cpp  SenetSticksWin.h  senetgame.c  senetgame.h
